tests/baselines/reference/narrowByClauseExpressionInSwitchTrue9.errors.txt
narrowByClauseExpressionInSwitchTrue9.ts(14,30): error TS2339: Property 'mine' does not exist on type 'never'.


==== narrowByClauseExpressionInSwitchTrue9.ts (1 errors) ====
    interface IProps {
        one: boolean;
    }
    
    class Foo {
        mine: string = "";
    
        myMethod(x: IProps) {
            const { one } = x;
            switch (true) {
                case one:
                    break;
                default:
                    let x = this.mine;
                                 ~~~~
!!! error TS2339: Property 'mine' does not exist on type 'never'.
            }
        }
    }
    